app/styles/auk/_auk-additions.scss
/* Framework & external component fixes
   ========================================================================== */

// Modal

.auk-modal-backdrop > .ember-view {
  height: 100%;
}


// Ember data table

.auk-table--no-scroll {
  .data-table-content {
    overflow: hidden;
  }
}

.auk-table {
  .data-table,
  &.data-table {
    tbody {
      tr:hover {
        background: $auk-gray-100;
      }
    }
  }
}

.auk-table--striped {
  .data-table,
  &.data-table {
    tbody {
      tr:hover {
        td {
          background: $auk-gray-200;
        }
      }
    }
  }

  tbody {
    tr.lt-expanded-row {
      td {
        background: $auk-white;
      }
    }
  }
}

.auk-table--noactions {
  .data-table tbody tr:hover {
    background-color: transparent !important;
  }
}

.auk-panel .au-c-table-wrapper {
  border: 0;

  tr:last-child {
    border-bottom: 0;
  }
}

.data-table__actions--top {
  border-bottom: none;
}

table tr.lt-expanded-row {
  &:hover {
    background-color: $auk-white !important;
  }
}

// When using auk-modal, the ember power select wormhole is behind the modal
// auk-modal has z-index of 1600;

.ember-power-select-dropdown {
  z-index: $z-index-modal-additive + $z-index-dropdown;
}


// Sortable

.sortable-item {
  transition: all 0.125s;

  &.is-dragging {
    transition-duration: 0s;
  }

  &.is-dragging,
  &.is-dropping {
    z-index: $z-index-drag;
  }
}


// Simplified document-card. Publication reference-documents.

// Note that despite its name, "vlc-procedure-step" is used for displaying
// *document* details. Both the CSS component itself and its name are suboptimal
// in this context, but used since no alternative for a minimal document card
// is currently available.

// Adjust procedure step to fit inside a panel

.auk-panel .vlc-procedure-step {
  &:first-child:before {
    top: -2.2rem;
    height: calc(100% + 4.4rem);
  }

  &:before {
    z-index: 0;
  }
}

.vlc-procedure-step .auk-panel,
.vlc-procedure-step .auk-accordion-panel {
  border: 0;
}

.vlc-procedure-step .auk-accordion__button {
  padding-left: .5rem !important;
}

.vlc-procedure-step .auk-accordion__title {
  padding-left: .5rem;
}

.vlc-procedure-step--nopadding {
  padding: 0;
}


// File uploader

.auk-file-upload input[type="file"] {
  &:hover,
  &:focus,
  &:active {
    &:not([disabled]) ~ .auk-file-upload__content {
      .auk-file-upload__action-button {
        box-shadow: none;

        color: $au-button-secondary-hover-color;
        background-color: transparent;
        border-color: $au-button-secondary-hover-color;
      }
    }
  }
}


// Temporary overrides for AuButton & AuLink refactor

// List

.auk-list--view {
  .auk-list__item {
    .au-c-button,
    .au-c-link {
      margin-left: auto;
    }
  }
}

// Table

.auk-table {
  .auk-button-toolbar {
    .au-c-button,
    .au-c-link {
      margin-top: 0;
      margin-bottom: 0;
    }
  }
}

// Button toolbar

.auk-button-toolbar {
  .au-c-button {
    margin: 0.4rem 0.8rem 0.4rem 0;
  }

  .au-c-button:last-child {
    margin-right: 0;
  }

  .au-c-link {
    margin: 0.4rem 1.6rem 0.4rem 0;
  }

  .au-c-link:last-child {
    margin-right: 0;
  }
}

.auk-button-toolbar--compact {
  .au-c-button,
  .au-c-button:last-child,
  .au-c-link,
  .au-c-link:last-child {
    margin: 0 -0.1rem 0 0;
  }

  .au-c-button:first-child {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  .au-c-button:last-child {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
}

// Button

.auk-button {
  &:focus {
    box-shadow: none;

    outline: var(--au-outline);
    outline-offset: var(--au-outline-offset);
  }
}

.auk-button--secondary {
  &:focus {
    box-shadow: inset 0 0 0 0.2rem $auk-blue-500;

    &:hover {
      box-shadow: inset 0 0 0 0.2rem $auk-blue-700;
    }

    &:active {
      box-shadow: inset 0 0 0 0.2rem $auk-blue-800;
    }
  }
}

.auk-button--tertiary {
  &:focus {
    box-shadow: inset 0 0 0 0.1rem $auk-gray-300;

    &:hover {
      box-shadow: inset 0 0 0 0.1rem $auk-blue-500;
    }

    &:active {
      box-shadow: inset 0 0 0 0.1rem $auk-blue-800;
    }
  }
}

.auk-button-link {
  border-radius: $au-button-border-radius;

  &:focus {
    box-shadow: none;

    outline: var(--au-outline);
    outline-offset: var(--au-outline-offset);
  }
}

.auk-button--muted {
  &.au-c-button--naked {
    &,
    &:visited {
      color: $auk-gray-600;
    }

    &:hover,
    &:focus-visible,
    &:active {
      color: $auk-gray-800;
    }

    &.is-disabled,
    &.is-disabled:hover,
    &.is-disabled:focus-visible,
    &.is-disabled:active {
      color: $auk-gray-700;
    }

    &.is-loading,
    &.is-loading:hover,
    &.is-loading:focus-visible {
      color: $auk-gray-700;
    }
  }
}

// Input with clear action

.auk-input-with-clear-action {
  > .au-c-input-wrapper {
    > .au-c-input {
      padding-right: 3.5rem;
    }
  }

  > .au-c-button {
    position: absolute;
    top: .1rem;
    right: .1rem;
    bottom: 0;

    outline-offset: calc(var(--au-outline-offset) * -1);
  }
}

.auk-checkbox-list {
  display: flex;
  flex-direction: column;
  gap: .5rem;

  > .auk-checkbox-list {
    margin-left: 2.5rem;
  }
}

.auk-checkbox-list--inline {
  flex-direction: row; // reset direction
  gap: normal; // reset gap

  &:has(.auk-checkbox-list) {
    > .auk-checkbox-list {
      position: relative;

      outline: .3rem solid $auk-red-500;
      outline-offset: .3rem;

      &:after {
        position: absolute;
        display: block;
        top: 100%;
        left: -.6rem;

        min-width: 15rem;
        width: calc(100% + 1.2rem);
        padding: .3rem .6rem;
        background-color: $auk-red-500;

        color: $auk-white;
        content: 'Nested checkbox lists can\'t be used when the parent checkbox list has @layout \'inline\' defined.';
      }
    }
  }
}

